Fix two bugs detected in bioconda deployment
`sort` has been replaced by `sort_values` in recent pandas, it had
already been deprecated and corrected everything but in two places.

Latex template needs to define \highlight, observed in pdflatex
on a Ubuntu machine.

--- a/minvar/db/template.tex
+++ b/minvar/db/template.tex
@@ -49,6 +49,9 @@ $endif$
 \renewcommand\thesection{\@arabic\c@section}
 \renewcommand\thesubsection{\thesection.\@arabic\c@subsection}
 
+\providecommand{\tightlist}{%
+  \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
+
 \makeatother
 
 
