Add colour coded resistance information

--- a/src/minvar/db/template.tex
+++ b/src/minvar/db/template.tex
@@ -10,6 +10,26 @@
   includefoot,% Include footer in the margin calculations
   includehead% Include header
 }
+
+
+\usepackage[table]{xcolor}% color table cells
+% 6-class PiYG
+\definecolor{resistance6}{rgb}{0.773,0.106,0.49}
+\definecolor{resistance5}{rgb}{0.914,0.639,0.788}
+\definecolor{resistance4}{rgb}{0.992,0.878,0.937}
+\definecolor{resistance3}{rgb}{0.902,0.961,0.816}
+\definecolor{resistance2}{rgb}{0.631,0.843,0.416}
+\definecolor{resistance1}{rgb}{0.302,0.573,0.129}
+
+% 7-class RdBu
+%\definecolor{resistance7}{rgb}{0.843,0.188,0.153}
+%\definecolor{resistance6}{rgb}{0.988,0.553,0.349}
+%\definecolor{resistance5}{rgb}{0.996,0.878,0.565}
+%\definecolor{resistance4}{rgb}{1.0,1.0,0.749}
+%\definecolor{resistance3}{rgb}{0.878,0.953,0.973}
+%\definecolor{resistance2}{rgb}{0.569,0.749,0.859}
+%\definecolor{resistance1}{rgb}{0.271,0.459,0.706}
+
 % set default font to sans serif
 \renewcommand\familydefault{\sfdefault}
 % Header/footer
