--- a/src/minvar/db/template.tex
+++ b/src/minvar/db/template.tex
@@ -1,4 +1,5 @@
 \documentclass[a4paper]{article}
+\usepackage{datetime2}
 
 % Page geometry
 \usepackage{geometry}
@@ -50,7 +51,7 @@
 \fancyhf{}% Clear headers and footers
 \renewcommand{\headrulewidth}{0pt}% No header rule
 \renewcommand{\footrulewidth}{0pt}% No footer rule (default)
-\fancyhead[R]{\today}
+\fancyhead[R]{\DTMnow}
 \fancyfoot[R]{\thepage\ of \pageref{LastPage}}
 
 \usepackage{hyperref,graphicx}
